# ble-hid-combo-esp32

./: CMakeLists.txt  README.md  REVIEW.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  ble_hid.c  ble_hid.h  config_store.cpp  config_store.h  http_server.cpp  http_server.h  uart_bridge.cpp  uart_bridge.h  wifi_mgr.cpp  wifi_mgr.h
tools/: uart_client.py
web/: index.html
